# igneous

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: IgneousHelpers.cmake
include/dapper2d/: AudioStream.hpp  CFGParser.hpp  Camera.hpp  Engine.hpp  Input.hpp  NetworkManager.hpp  Networking.hpp  Renderer.hpp  ResourceLoader.hpp  Scene.hpp  Scenes.hpp  Sprite.hpp  ThreadSafeQueue.hpp  Vec2.hpp  Window.hpp
include/engine/camera/: Camera.h
include/engine/engine/: Engine.h  Renderer.h  Scene.h  Window.h
include/engine/networking/: NetworkManager.h
include/igneous/: AudioStream.hpp  CFGParser.hpp  Camera.hpp  Database.hpp  Engine.hpp  Event.hpp  Input.hpp  Renderer.hpp  ResourceLoader.hpp  Scene.hpp  Scenes.hpp  Sprite.hpp  ThreadPool.hpp  ThreadSafeQueue.hpp  Vec2.hpp  Window.hpp
include/igneous/engine/: CFGParser.hpp  Camera.hpp  Database.hpp  Engine.hpp  Event.hpp  ThreadPool.hpp  ThreadSafeQueue.hpp  Time.hpp  Vec2.hpp  Vec3.hpp
include/igneous/input/: Input.hpp  InputEvent.hpp  InputLayer.hpp
include/igneous/networking/: IdentityProvider.hpp  LocalIdentity.hpp  LocalNetwork.hpp  NetworkEvents.hpp  NetworkInterface.hpp  NetworkManager.hpp  RemoteNetwork.hpp  Serializer.hpp  SteamIdentity.hpp  SteamNetwork.hpp
include/igneous/rendering/: Renderer.hpp  Window.hpp
include/igneous/resources/: Animation.hpp  AnimationFrame.hpp  AudioStream.hpp  ResourceManager.hpp  Sprite.hpp
include/igneous/scenes/: Scene.hpp  SceneManager.hpp  SceneRoot.hpp
src/: AudioStream.cpp  CFGParser.cpp  Camera.cpp  Database.cpp  Engine.cpp  Input.cpp  NetworkManager.cpp  Networking.cpp  Renderer.cpp  ResourceLoader.cpp  Scene.cpp  Scenes.cpp  Sprite.cpp  Window.cpp
src/camera/: Camera.cpp
src/engine/: CFGParser.cpp  Camera.cpp  Database.cpp  Engine.cpp  Renderer.cpp  Scene.cpp  Window.cpp
src/input/: Input.cpp  InputLayer.cpp
src/networking/: LocalIdentity.cpp  LocalNetwork.cpp  NetworkManager.cpp  RemoteNetwork.cpp  SteamIdentity.cpp  SteamNetwork.cpp
src/parser/: CFGParser.cpp
src/rendering/: Renderer.cpp  Window.cpp
src/resources/: Animation.cpp  AudioStream.cpp  ResourceLoader.cpp  ResourceManager.cpp  Sprite.cpp
src/scenes/: Scene.cpp  SceneManager.cpp  SceneRoot.cpp
src/sprite/: Sprite.cpp
